src/test/deca/context/invalid/decl_var_01_so.deca
// Description:
//    Teste la déclaration de variable.
//
// Resultats:
//    Ligne 12: Déclaration de variables de type void impossible.
//
// Historique:
//    cree le 13/01/2023

{
// Doit être refusé.
void v;
}